@@ -24,13 +24,13 @@ import java.io.IOException;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.apache.hadoop.conf.Configuration;
-import org.apache.hadoop.mapred.JobConf;
 import org.apache.hadoop.mapred.LocalContainerLauncher;
 import org.apache.hadoop.mapred.ShuffleHandler;
 import org.apache.hadoop.mapreduce.MRConfig;
 import org.apache.hadoop.mapreduce.MRJobConfig;
 import org.apache.hadoop.mapreduce.v2.hs.JobHistoryServer;
 import org.apache.hadoop.mapreduce.v2.jobhistory.JHAdminConfig;
+import org.apache.hadoop.util.JarFinder;
 import org.apache.hadoop.yarn.YarnException;
 import org.apache.hadoop.yarn.conf.YarnConfiguration;
 import org.apache.hadoop.yarn.server.MiniYARNCluster;
@@ -45,8 +45,7 @@ import org.apache.hadoop.yarn.service.Service;
  */
 public class MiniMRYarnCluster extends MiniYARNCluster {
 
-  public static final String APPJAR = System.getProperty("yarn.mr.jar", JobConf
-      .findContainingJar(LocalContainerLauncher.class));
+  public static final String APPJAR = JarFinder.getJar(LocalContainerLauncher.class);
 
   private static final Log LOG = LogFactory.getLog(MiniMRYarnCluster.class);
   private JobHistoryServer historyServer;
@@ -55,7 +54,7 @@ public class MiniMRYarnCluster extends MiniYARNCluster {
   public MiniMRYarnCluster(String testName) {
     this(testName, 1);
   }
-  
+
   public MiniMRYarnCluster(String testName, int noOfNMs) {
     super(testName, noOfNMs);
     //TODO: add the history server
@@ -88,9 +87,9 @@ public class MiniMRYarnCluster extends MiniYARNCluster {
     conf.setBoolean(MRJobConfig.JOB_UBERTASK_ENABLE, false);
 
     // Set config for JH Server
-    conf.set(JHAdminConfig.MR_HISTORY_ADDRESS, 
+    conf.set(JHAdminConfig.MR_HISTORY_ADDRESS,
         JHAdminConfig.DEFAULT_MR_HISTORY_ADDRESS);
-    
+
     super.init(conf);
   }
 
